# tap-readthedocs

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release.yaml  test.yml
tap_readthedocs/: __init__.py  __main__.py  client.py  pagination.py  streams.py  tap.py
tests/: test_core.py  test_paginators.py
