[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-readthedocs"
description = "Singer tap for ReadTheDocs, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "ReadTheDocs",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "requests-cache~=1.0",
  "singer-sdk~=0.44.2",
  "toolz~=1.0.0",
]
optional-dependencies.dev = [
  "tap-readthedocs[testing,typing]",
]
optional-dependencies.testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
optional-dependencies.typing = [
  "mypy",
  "types-requests",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-readthedocs#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-readthedocs"
urls.Repository = "https://github.com/edgarrmondragon/tap-readthedocs"
scripts."tap-readthedocs" = "tap_readthedocs.tap:TapReadTheDocs.cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.sync.scripts]
console = "tap-readthedocs {args}"
jsonl = "tap-readthedocs {args} > tap-readthedocs.jsonl"

[tool.hatch.envs.test]
features = [
  "testing",
]
[tool.hatch.envs.test.scripts]
integration = "pytest {args:tests}"
dependencies = "deptry ."

[tool.hatch.envs.all]
template = "test"
[[tool.hatch.envs.all.matrix]]
python = [
  "3.9",
  "3.10",
  "3.11",
  "3.12",
  "3.13",
]

[tool.hatch.envs.typing]
features = [
  "testing",
  "typing",
]
[tool.hatch.envs.typing.scripts]
check = "mypy --strict {args:tap_readthedocs tests}"

[tool.ruff]
line-length = 88

lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_readthedocs",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
tap-readthedocs = "tap_readthedocs"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "deptry",
  "mypy",
  "pytest",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:Fields in transformed catalog but not in records:UserWarning",
  "default:No records returned in stream 'projects:UserWarning",
  "default:No records returned in stream 'redirects:UserWarning",
  "default:No records returned in stream 'subprojects:UserWarning",
  "default:No records returned in stream 'translations:UserWarning",
  "default:No records returned in stream 'versions:UserWarning",
  "default:No records were available to test:UserWarning",
  "default:Use `http_method` instead:singer_sdk.helpers._compat.SingerSDKDeprecationWarning",
]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "backoff.*",
  "toolz.*",
]
ignore_missing_imports = true
