[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.4",
  "hatchling==1.27",
]

[project]
name = "tap-readthedocs"
description = "Singer tap for ReadTheDocs, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "ReadTheDocs",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.32.3",
  "requests-cache~=1.0",
  "singer-sdk~=0.44.2",
  "toolz~=1.0.0",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-readthedocs#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-readthedocs"
urls.Repository = "https://github.com/edgarrmondragon/tap-readthedocs"
scripts."tap-readthedocs" = "tap_readthedocs.tap:TapReadTheDocs.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_readthedocs",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:Fields in transformed catalog but not in records:UserWarning",
  "default:No records returned in stream 'projects:UserWarning",
  "default:No records returned in stream 'redirects:UserWarning",
  "default:No records returned in stream 'subprojects:UserWarning",
  "default:No records returned in stream 'translations:UserWarning",
  "default:No records returned in stream 'versions:UserWarning",
  "default:No records were available to test:UserWarning",
  "default:Use `http_method` instead:singer_sdk.helpers._compat.SingerSDKDeprecationWarning",
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "backoff.*",
  "toolz.*",
]
ignore_missing_imports = true

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"
